----------------------------------------------------------------------
 OmegaT 2.2.1 update 1
----------------------------------------------------------------------
  1 Enhancement
----------------------------------------------------------------------
2.2.1 update 1 vs. 2.2.1

  Other enhancements:

  - Japanese localisation updated to 2.2.1 (UI)

----------------------------------------------------------------------
 OmegaT 2.2.1
----------------------------------------------------------------------
  9 Enhancements
  3 Bugfixes
----------------------------------------------------------------------
2.2.1 vs. 2.2.0 update 4

  Implemented requests:

  - Visual identification of non-unique segments
  http://sourceforge.net/support/tracker.php?aid=1869046

  - Priority to Mark untranslated segments over Display source
  http://sourceforge.net/support/tracker.php?aid=1811562

  Other enhancements:

  - Italian localisation updated to 2.2.0 (UI, Readme, documentation)
  - Basque localisation updated to 2.2.0 (UI, Readme, documentation)
  - Dutch localisation updated to 2.2.0 (UI, Readme, documentation)
  - Japanese localisation updated to 2.2.0 (UI)
  - Belarusian localisation updated to 2.1.0 (UI)

  - The Open XML Word option "Hidden Text" as been renamed to
"Non-visible Instruction Text" to avoid confusion with the "Hidden effect"
or "Hidden attribute" in Word.

  - When Display Source Segments is used, a new option (Options > View)
allows to set whether all source segments are bold (as previously), or
only the current one.

  Bug fixes:

  - ResX filter: comments appeared as translatable text.

  - HTML (including the HTML Help Compiler Filter) and XML filters: 
When translating attributes, forbidden characters (e.g., '&', '<') were not 
converted back to entities in the target documents.

  - XML filters: entities from attributes were not converted to 
characters.

----------------------------------------------------------------------
 OmegaT 2.2.0 update 4 